[gd_scene load_steps=5 format=2]

[ext_resource path="res://Themes/fonts/OpenSans-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Themes/vole_theme.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/AssignmentsStudent.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 0.8, 1 )

[node name="AssignmentNameLabel" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -511.0
margin_top = -267.0
margin_right = 511.0
margin_bottom = -172.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Assignment Name"
align = 1
autowrap = true

[node name="MenuBtn" type="Button" parent="ColorRect"]
anchor_left = 0.49
anchor_top = 0.5
anchor_right = 0.49
anchor_bottom = 0.5
margin_left = -451.76
margin_top = -111.0
margin_right = -201.76
margin_bottom = -61.0
text = "Back To Menu"

[node name="JoinClassroomBtn" type="Button" parent="ColorRect"]
visible = false
anchor_left = 0.49
anchor_top = 0.5
anchor_right = 0.49
anchor_bottom = 0.5
margin_left = -451.76
margin_top = -21.0
margin_right = -201.76
margin_bottom = 29.0
rect_pivot_offset = Vector2( 280, 40 )
text = "Join Classroom"

[node name="LeaveClassroomBtn" type="Button" parent="ColorRect"]
visible = false
anchor_left = 0.49
anchor_top = 0.5
anchor_right = 0.49
anchor_bottom = 0.5
margin_left = -451.76
margin_top = 69.0
margin_right = -201.76
margin_bottom = 119.0
rect_pivot_offset = Vector2( 280, 40 )
text = "Leave Classroom"

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -113.0
margin_top = -111.0
margin_right = 460.0
margin_bottom = 249.0
color = Color( 0.827451, 0.827451, 0.827451, 1 )

[node name="AssignmentDescriptionLabel" type="Label" parent="ColorRect/ColorRect"]
margin_left = 6.0
margin_top = 5.0
margin_right = 568.0
margin_bottom = 354.0
autowrap = true

[node name="Label" type="Label" parent="ColorRect"]
margin_left = 400.0
margin_top = 164.0
margin_right = 971.0
margin_bottom = 207.0
text = "Assignment Description"
align = 1

[connection signal="pressed" from="ColorRect/MenuBtn" to="." method="_on_MenuBtn_pressed"]
